refatorando, lint e lint:stryle e requesitos

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+  margin: 0;
+}
+
+header {
+  text-align: center;
+  background-color: white;
+}
+
 .color {
   border: 1px solid black;
   height: 40px;
@@ -10,16 +19,22 @@
   margin-bottom: 20px;
 }
 
-.pixel {
-  display: inline-block;
-  border: 1px solid black;
-  height: 40px;
-  width: 40px;
-  background-color: white;
+main {
+  text-align: center;
 }
 
 #pixel-board {
+  margin-top: 10px;
   display: inline-block;
+}
+
+.pixel {
+  background-color: white;
+  border: 1px solid black;
+  display: inline-block;
+  justify-content: center;
+  height: 40px;
+  width: 40px;
 }
 
 .line-pixel {
