--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
 .color {
+    width: 40px;
+    height: 40px;
     border-style: solid;
     border-width: 1px;
     border-color: black;
+    display: inline-block;
+}
+
+#pixel-board {
+    width: 250px;
+    height: 250px;
+}
+
+.pixel {
+    background-color: white;
+    width: 40px;
+    height: 40px;
+    border-style: solid;
+    border-width: 1px;
     display: inline-block;
 }
