mais alguns ajustes de estilo

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   margin: 5px;
 }
 
+.color:hover {
+  margin-bottom: 25px;
+}
+
 .linha {
   height: 40px;
 }
@@ -49,12 +53,6 @@ body {
   border-color: rgb(241, 16, 16);
 }
 
-/* #clear-board {
-  margin-bottom: 5px;
-  margin-right: 5px;
-  display: block;
-} */
-
 #title {
   text-align: center;
 }
@@ -62,4 +60,8 @@ body {
 #conteudoPrincipal {
   margin: auto;
   text-align: center;
+}
+
+.selected:hover {
+  border-width: 3px;
 }
