--- a/style.css
+++ b/style.css
@@ -56,3 +56,14 @@ main {
   width: 40px;
   height: 40px;
 }
+
+#button {
+  margin-top: 30px;
+  width: 100%;
+  text-align: center;
+}
+
+#clear-board {
+  display: inline-block;
+  text-align: center;
+}
