--- a/style.css
+++ b/style.css
@@ -1,28 +1,32 @@
 #black {
-    background-color: black;
+  background-color: black;
 }
 
 #yellow {
-    background-color: yellow;
+  background-color: yellow;
 }
 
 #grey {
-    background-color: gray;
+  background-color: gray;
 }
 
 #blue {
-    background-color: blue;
+  background-color: blue;
 }
 
 .color {
-    border: 1px solid black;
-    width: 40px;
-    height:40px;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
 }
 
 .pixel {
-    width: 40px;
-    height: 40px;
-    border: 1px solid black;
-    background-color: white;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  background-color: white;
+}
+
+#clear-board {
+  margin-left: 68px;
 }
