--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
   border-radius: 30%;
 }
 
-/* Procurei no stackoverflow para conseguir reduzir os espaços entre os
-inline-blocks
-link:
-https://stackoverflow.com/questions/5184512/cant-get-rid-of-spaces-between-inline-block-elements
-*/
+/* Procurei no stackoverflow para conseguir reduzir os espaços entres os pixels
+link:https://stackoverflow.com/
+questions/5184512/cant-get-rid-of-spaces-between-inline-block-elements */
+
+
 .pixel {
   background-color: white;
   border: 1px solid black;
@@ -49,5 +49,5 @@ https://stackoverflow.com/questions/5184512/cant-get-rid-of-spaces-between-inlin
 
 body {
   margin: 0;
-  background-image: url("pixel-art.jpeg");
+  background-image: url('pixel-art.jpeg');
 }
