--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ main {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  max-width: 1300px;
+  min-height: 400px;
+  max-width: 720px;
   padding: 10px;
 }
 
@@ -159,13 +160,21 @@ footer {
   margin: 10px 0;
 }
 
-#color1 {}
+#color1,
+#color2,
+#color3,
+#color4 {
+  transition: all 0.25s;
+  cursor: pointer;
+}
 
-#color2 {}
-
-#color3 {}
-
-#color4 {}
+#color1:hover,
+#color2:hover,
+#color3:hover,
+#color4:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
 
 #pixel-board {
   background-color: var(--gray);
@@ -219,27 +228,43 @@ footer {
 
 /* CLASS */
 .tool-botton {
+  transition: all 0.25s;
+  cursor: pointer;
   border: outset;
   border-radius: 5px;
+  cursor: poin;
   height: 25px;
   margin: 5px;
-  width: 60px;
+  width: 100px;
 }
 
+.tool-botton:hover {
+  -webkit-transform: scale(1.25);
+  transform: scale(.75);
+}
+
+.select,
 .color {
   border: 1px black solid;
   border-radius: 5px;
-  height: 40px;
+  height: 38px;
   margin: 1px;
-  width: 40px;
+  width: 38px;
 }
 
 .pixel {
+  transition: all 0.25s;
+  cursor: pointer;
   background-color: white;
   border: 1px solid var(--gray);
   border-radius: 2px;
-  height: 25px;
-  width: 25px;
+  height: 38px;
+  width: 38px;
+}
+
+.pixel:hover{
+  -webkit-transform: scale(1.25);
+  transform: scale(.9);
 }
 
 .list-item {
