--- a/style.css
+++ b/style.css
@@ -20,3 +20,11 @@
 #purple {
   background-color: purple;
 }
+
+.pixel {
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  background-color: white;
+}
