--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+h1 {
+  text-align: center;
+}
+
+#color-palette {
+  text-align: center;
+}
+
 .color {
   width: 40px;
   height: 50px;
   display: inline-block;
   border: 1px solid black;
 }
-
 
 #firstColor {
   background-color: black;
@@ -26,6 +33,9 @@
   font-size: 0;
   width: 206px;
   height: 206px;
+  align-content: center;
+  margin-left: 42%;
+  margin-top: 50px;
   
 }
 
@@ -39,7 +49,9 @@
   background-color: white;
 }
 
-.selected
+.selected {
+  border-color: khaki;
+}
 
 
 
