--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ h1 {
   width: 206px;
   height: 206px;
   align-content: center;
-  margin-left: 42%;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 50px;
   
 }
@@ -53,6 +54,20 @@ h1 {
   border-color: khaki;
 }
 
+#clear-board {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  border:1px solid #25692A;
+  border-radius:4px;
+  cursor:pointer;
+  font-weight:bold;
+  font-size:13px;
+  padding:6px 10px;
+  text-decoration:none;
+  background-color: rgb(248, 185, 185);
+}
 
 
 
