--- a/style.css
+++ b/style.css
@@ -69,5 +69,33 @@ h1 {
   background-color: rgb(248, 185, 185);
 }
 
+#board-size {
+  display: inline-block;
+  margin-top: 30px;
+  border:1px solid #25692A;
+  border-radius:4px;
+  cursor:pointer;
+  font-weight:bold;
+  font-size:13px;
+  padding:6px 10px;
+  text-decoration:none;
+  background-color: white;
+}
 
+#vqv {
+  display: inline-block;
+  margin-top: 30px;
+  border:1px solid #25692A;
+  border-radius:4px;
+  cursor:pointer;
+  font-weight:bold;
+  font-size:13px;
+  padding:6px 10px;
+  text-decoration:none;
+  background-color: rgb(248, 185, 185);
+}
 
+form {
+  display: block;
+  text-align: center;
+}
