--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+
 * {
-  font-family: Helvetica, sans-serif;
+  font-family: 'MedievalSharp', cursive;
   margin: 0;
   padding: 0;
 }
 
 body {
-  background-color: rgb(40, 50, 60);
+  background-color: rgb(165, 182, 199);
+}
+h1 {
+ margin-top: 10px;
 }
 
 main {
-  padding: 20px;
   margin: 0 20px;
+  padding: 20px;
 }
 
 section {
@@ -23,12 +28,12 @@ section {
 
 
 #container-title {
-  background-color: rgb(160, 159, 101);
+  background-color: rgb(216, 152, 91);
   height: 5em;
   margin-bottom: 10px;
+  padding: 10px 0;
   text-align: center;
   width: 100%;
-  padding: 10px 0;
 }
 
 #title {
@@ -36,7 +41,7 @@ section {
 }
 
 .color {
-  border-radius: 20%;
+  border-radius: 75%;
   border: 1px solid black;
   display: inline-block;
   height: 100px;
@@ -68,12 +73,40 @@ section {
 }
 
 #board-size {
-  margin: 0 15px;
-  width: 50px;
+  border-radius: 20px;
+  border: none;
+  height: 25px;
+  margin: 0 10px;
+  text-align: center;
+  width: 60px;
 }
 
 #clear-board , #generate-board {
-  padding: 5px;
   border-radius: 20px;
+  border: none;
   font-weight: 700;
+  padding: 5px;
+  width: 10vw;
+}
+
+#clear-board {
+  background-color: rgba(0, 128, 0, 0.7);
+}
+
+#generate-board {
+  background-color: rgba(116, 134, 151, 0.7);
+}
+
+#clear-board:hover {
+  background-color: rgb(238, 234, 234);
+  border: 1px solid rgba(0, 128, 0, 0.7);
+  box-shadow: 0 0 5px rgba(0, 128, 0, 0.7);
+  color: rgba(0, 128, 0, 0.7);
+}
+
+#generate-board:hover {
+  background-color: rgb(238, 234, 234);
+  border: 1px solid rgba(116, 134, 151, 0.7);
+  box-shadow: 0 0 5px rgba(116, 134, 151, 0.7);
+  color: rgba(116, 134, 151, 0.7);
 }
