--- a/style.css
+++ b/style.css
@@ -1,18 +1,51 @@
+#header-container {
+  align-items: center;
+  background-color: rgb(3, 107, 82);
+  border-bottom: 7px solid rgb(47, 193, 140);
+  display: flex;
+  margin: -8px -12px 5px;
+}
+
+#title-container {
+  margin: auto;
+}
+
+#nav-container {
+  margin-left: auto;
+  margin-right: 7%;
+}
+
 #title {
-  margin: 2em;
-  text-align: center;
+  color: rgb(253, 255, 255);
+  letter-spacing: 2.5px;
+  margin: 17.44px 72px;
+}
+
+#nav {
+  color: rgb(253, 255, 255);
+  font-size: 18px;
+  margin-left: 72px;
+}
+
+.link {
+  color: rgb(257, 255, 255);
+  letter-spacing: 0.7px;
+  text-decoration: none;
+}
+
+body {
+  background: linear-gradient(0deg, white 24%, rgba(3, 107, 82, 0.3) 78%, white 91%);
 }
 
 .color {
-  width: 87px;
-  height: 87px;
-  display: inline-block;
-  margin: 0 0.3%;
+  border-radius: 16%;
   border: solid 1px;
-  text-align: center;
+  width: 12%;
 }
 
 #color-palette {
+  font-size: 0;
+  margin-top: 5%;
   text-align: center;
 }
 
@@ -25,36 +58,59 @@
 }
 
 .line {
-  text-align: center;
   font-size: 0;
+  text-align: center;
 }
 
 .pixel {
-  width: 40px;
-  height: 40px;
-  display: inline-block;
-  border: solid 1px;
   background-color: white;
+  border: solid 1px;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
 }
 
 #clear-board-container {
-  text-align: center;
   margin: 1.5%;
+  text-align: center;
 }
 
 #clear-board {
   font-family: fantasy;
-  font-size: 2em;
   width: 14%;
-  padding: 0.3%;
 }
 
 #input-container {
-  text-align: center;
   margin: 1.5%;
+  text-align: center;
 }
 
 #board-size {
-  width: 157px;
   text-align: center;
+  width: 157px;
+}
+
+#footer {
+  margin: 30% -12px 0;
+  text-align: center;
+}
+
+#phrase {
+  background-color: rgb(68, 73, 85);
+  margin-top: 5%;
+  padding: 2.2% 0;
+}
+
+#phrase a {
+  color: rgb(253, 251, 251);
+  font-size: 12px;
+  overflow: hidden;
+  text-decoration: none;
+}
+
+#signature {
+  background-color: rgb(60, 64, 74);
+  color: rgb(157, 162, 173);
+  font-size: 12px;
+  padding: 3.3% 0;
 }
