--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 .color {
-  border: black;
-  border-radius: 1px;
-  border-style: solid;
+  border: black solid 1px;
+
   width: 50px;
   height: 50px;
   display: inline-block;
@@ -29,9 +28,10 @@
   border-style: solid;
   height: 40px;
   width: 40px;
-  display: inline-block; }
+  display: inline-block;
+  background-color: white; }
 
-.pixel-board {
+/* .pixel-board {
   height: 80px;
   width: 80px;
-}
+} */
