--- a/style.css
+++ b/style.css
@@ -29,3 +29,13 @@
     background-color: white;
     
 }
+
+.selected {
+    
+    width: 120px;
+    height: 120px;
+    
+
+    /* código inspirado por https://www.w3schools.com/howto/howto_css_zoom_hover.asp */
+}
+
