--- a/style.css
+++ b/style.css
@@ -30,14 +30,12 @@ h1 {
 }
 
 #pixel-board {
-  font-size: 0;
-  width: 206px;
-  height: 206px;
-  align-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  
+  margin-top: 30px;
+}
+
+.pixel-row {
+  justify-content: center;
+  display: flex;
 }
 
 .pixel {
@@ -45,10 +43,11 @@ h1 {
   height: 40px;
   display: inline-block;
   border: 1px solid black;
+  background-color: white;
   margin-top: -1px;
   margin-left: -1px;
-  background-color: white;
 }
+
 
 #clear-board {
   display: block;
@@ -71,7 +70,6 @@ h1 {
   border:1px solid #25692A;
   border-radius:4px;
   cursor:pointer;
-  font-weight:bold;
   font-size:13px;
   padding:6px 10px;
   text-decoration:none;
@@ -91,7 +89,7 @@ h1 {
   background-color: rgb(248, 185, 185);
 }
 
-form {
+#sizeBoard {
   display: block;
   text-align: center;
 }
