--- a/style.css
+++ b/style.css
@@ -2,20 +2,24 @@
 
 #color-palette{}
 
-.color{border: black solid 1px;}
+.color{border: black solid 1px;
+display: inline-block;}
 
 #pink{background-color: pink;
-padding: 5px;}
+padding: 20px;}
 
-#brown{background-color: brown;}
+#brown{background-color: brown;
+padding: 20px;}
 
-#black{background-color: black;}
+#black{background-color: black;
+padding: 20px;}
 
-#purple{background-color: purple;}
+#purple{background-color: purple;
+padding: 20px}
 
-#pixel-board{width: 25px;
-height:25px;
-background-color: white;}
+#pixel-board
 
-.pixel{border: 1px black ;
-width: 40px; height: 40px;}
+.pixel{border: 1px solid black ;
+width: 40px; height: 40px;
+display: inline-block;}
+
