--- a/style.css
+++ b/style.css
@@ -1,8 +1,35 @@
+body {
+  background-color: rgb(252, 247, 241);
+}
+
+#img {
+  width: 350px;
+  position: absolute;
+  left: 70%;
+  top: 8px;
+}
+
 h1 {
   text-align: center;
+  padding-top: 30px;
+  font-size: 20px;
+  padding-bottom: 0;
+  font-family:Tahoma;
+  color: rgb(240, 6, 104);
+}
+
+header {
+  text-align: center;
+  padding-top: 50px;
+  color:rgb(252, 247, 241);
+  font-size: 50px;
+  font-family:monospace;
+  height: 100px;
+  background-color:rgb(240, 6, 104);
 }
 
 #color-palette {
+  padding-top: 1px;
   text-align: center;
 }
 
@@ -44,8 +71,6 @@ h1 {
   display: inline-block;
   border: 1px solid black;
   background-color: white;
-  margin-top: -1px;
-  margin-left: -1px;
 }
 
 
@@ -54,42 +79,47 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
-  border:1px solid #25692A;
+  border:1px solid rgb(180, 170, 174);
   border-radius:4px;
   cursor:pointer;
   font-weight:bold;
   font-size:13px;
   padding:6px 10px;
   text-decoration:none;
-  background-color: rgb(248, 185, 185);
+  background-color: rgb(240, 6, 104);
+  color: rgb(252, 247, 241);
+  font-family:Tahoma;
 }
 
 #board-size {
   display: inline-block;
   margin-top: 30px;
-  border:1px solid #25692A;
+  border:1px solid rgb(180, 170, 174);
   border-radius:4px;
   cursor:pointer;
   font-size:13px;
   padding:6px 10px;
-  text-decoration:none;
   background-color: white;
+  width: 110px;
+  font-family:Tahoma;
 }
 
-#vqv {
+#generate-board {
   display: inline-block;
   margin-top: 30px;
-  border:1px solid #25692A;
+  border:1px solid rgb(180, 170, 174);
   border-radius:4px;
   cursor:pointer;
   font-weight:bold;
   font-size:13px;
   padding:6px 10px;
-  text-decoration:none;
-  background-color: rgb(248, 185, 185);
+  background-color: rgb(240, 6, 104);
+  color: rgb(252, 247, 241);
+  width: 70px;
 }
 
 #sizeBoard {
   display: block;
   text-align: center;
 }
+
