--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ header {
 
 #pixel-board {
   margin-top: 30px;
+  margin-bottom: 200px;
 }
 
 .pixel-row {
@@ -123,3 +124,17 @@ header {
   text-align: center;
 }
 
+#ft {
+  background-color: rgb(240, 6, 104);
+  color: rgb(252, 247, 241);
+  font-family:Tahoma;
+  text-align: center;
+  bottom: 0;
+  height: 80px;
+  font-size: 30px;
+  position:unset;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  
+}
