--- a/style.css
+++ b/style.css
@@ -1,84 +1,70 @@
-#color-palette .color{
-    width: 50px;
-    height: 50px;
-    border: 1px solid black;
-}
-
-#color-palette {
-   margin-top: 20px;
-   padding-left: 530px;
-    
-}
-.selectedColor{
-  box-shadow: 3px 3px 3px black;
-}
-
-#title {
+#header {
     text-align: center;
 }
-
-
-
-#campoQtd {
-    text-align: center;
-    width: 20%;
-    margin: auto
-}
-
-.conteinerPixel {
-    margin-top: 30px;
-    width: 100%;
-    height: 400px;
-    border: 1px solid black;
+.pixel {
+    background-color: white;
 }
 
 .painel-color {
+    text-align: center;
     width: 100%;
+    padding-left: auto;
+    padding-right: auto;
+}
+#pixel-board{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
-.pixel-board {
-    margin-top: 30px;
-    margin-left: 260px;
-    display: inline-block;
-    width: 60%;
+.selectedColor{
+    box-shadow: 3px 3px 3px gray;
 }
 
-.pixel{
-    width: 50px;
-    height: 50px;
+.grade{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    max-width: 35%;
+    padding: ;
 }
 
-fieldset {
+#pixel-board{
+    text-align: center;
+}
+
+#bordaFildSet{
+    width: 50%;
+    margin-top: 20px;
+}
+
+#color-palette {
+    display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-#bordaFildSet {
-    padding-left: 268px;;
-    padding-right: 260px;
-    max-width: 35%;
+
+.color, .pixel {
+    width: 40px;
+    height: 40px;
+    border: 1px solid black;
 }
 
-#cor1 {
-  background-color: rgb(0, 0, 0);
+#cor1{
+  background-color: black;
 }
 
-#cor2 {
-    background-color: rgb(214, 52, 52);
+#cor2{
+  background-color: blue;  
 }
 
-#cor3 {
-    background-color: rgb(180, 79, 189);
+#cor3{
+  background-color: yellow;  
 }
 
-#cor4 {
-    background-color: rgb(61, 197, 48);
-}
-
-#cor5 {
-    background-color: rgb(170, 197, 47);
-}
-
-div{
-  display: inline-block;
+#cor4{
+  background-color: green;  
 }
