--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     width: 50%;
 }
 
-.selectedColor{
+.selected{
     box-shadow: 3px 3px 3px gray;
 }
 
@@ -28,7 +28,6 @@
     margin-right: auto;
     margin-top: 60px;
     max-width: 35%;
-    padding: ;
 }
 
 #pixel-board{
