--- a/style.css
+++ b/style.css
@@ -29,9 +29,10 @@ body{
     font-size: 0;
 }
 .pixel{
-    width: 38px;
-    height: 38px;
+    width: 40px;
+    height: 40px;
     border: 1px solid black;
     display: inline-block;
     background-color: rgb(255, 255, 255);
+    box-sizing: border-box;
 }
