--- a/style.css
+++ b/style.css
@@ -61,3 +61,12 @@
 #colunas {
 
 }
+
+#selecionada {
+    display: inline-block;
+    border: solid 1px black;
+    width: 40px;
+    height: 40px;
+    margin-block: -3px;
+    background-color: white;
+}
